# deflatable-dict

./: .gitignore  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  release.yaml
src/deflatabledict/: __init__.py  deflatable.py
src/deflatablemap/: __init__.py  deflatable.py
src/deflatablemapping/: deflatable.py  inflatable.py
tests/: 1_standarddict.py  2_deflatabledict.py  conftest.py  test.py
tests/tests/: 2_deflatabledict.py  3_list_flattening.py
