[metadata]
name = deflatable-dict
version = 0.2.0
author = Lucas Sargent
author_email = lucas.sargent@eliiza.com.au
description = A dictionary that can be flattened and re-inflated
keywords = dict flatten nested yaml yaml
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JJ11teen/deflatable-dict
project_urls =
    Bug Tracker = https://github.com/JJ11teen/deflatable-dict/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
tests = pytest==6.2.4

[options.packages.find]
where = src